versions/v2.16/modules/pt/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
= Configurando o Microsoft Active Directory Federation Service (SAML)
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-09-18
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/configure-microsoft-ad-federation-service-saml/index.adoc 
:product-path: rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
ifeval::["{build-type}" != "community"]
:xref-ms-adfs-for-rancher: xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc
:xref-rancher-for-ms-adfs: xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/rancher-for-ms-adfs.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-ms-adfs-for-rancher: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/configure-microsoft-ad-federation-service-saml/configure-ms-adfs-for-rancher.adoc
:xref-rancher-for-ms-adfs: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/configure-microsoft-ad-federation-service-saml/configure-rancher-for-ms-adfs.adoc
endif::[]

Se sua organização utiliza o Microsoft Active Directory Federation Services (AD FS) para autenticação de usuários, você pode configurar o Rancher para permitir que seus usuários façam login usando suas credenciais do AD FS.

[#_prerequisites]
== Pré-requisitos

Você deve ter o Rancher instalado.

* Obtenha a URL do seu servidor Rancher. Durante a configuração do AD FS, substitua esta URL pelo espaço reservado `<RANCHER_SERVER>`.
* Você deve ter uma conta de administrador global na sua instalação do Rancher.

Você deve ter um https://docs.microsoft.com/en-us/windows-server/identity/active-directory-federation-services[Servidor Microsoft AD FS] configurado.

* Obtenha o IP/nome DNS do seu servidor AD FS. Durante a configuração do AD FS, substitua este IP/nome DNS pelo espaço reservado `<AD_SERVER>`.
* Você deve ter acesso para adicionar https://docs.microsoft.com/en-us/windows-server/identity/ad-fs/operations/create-a-relying-party-trust[Confianças de partes confiáveis] no seu Servidor AD FS.

[#_setup_outline]
== Esboço da Configuração

Configurar o Microsoft AD FS com o Servidor Rancher requer a configuração do AD FS no seu servidor Active Directory e a configuração do Rancher para utilizar seu servidor AD FS. As páginas a seguir servem como guias para configurar a autenticação do Microsoft AD FS na sua instalação do Rancher.

* {xref-ms-adfs-for-rancher}[1. Configurando o Microsoft AD FS para o Rancher]
* {xref-rancher-for-ms-adfs}[2. Configurando o Rancher para o Microsoft AD FS]

[NOTE]
.Advertências do Provedor SAML
====
* Usuários e grupos não são validados quando você atribui permissões a eles no Rancher.
* Ao adicionar usuários, os IDs exatos dos usuários (ou seja, `UID Field`) devem ser inseridos corretamente. Enquanto você digita o ID do usuário, não haverá busca por outros IDs de usuários que possam corresponder.
* Ao adicionar grupos, você deve selecionar o grupo no menu suspenso ao lado da caixa de texto. O Rancher assume que qualquer entrada da caixa de texto é um usuário.
* O menu suspenso de grupos mostra apenas os grupos dos quais você é membro. No entanto, se você tiver permissões de Administrador ou permissões de Administrador restritas, poderá ingressar em um grupo do qual não é membro.
====

[#__xref_ms_adfs_for_rancher_next_configuring_microsoft_ad_fs_for_rancher]
=== {xref-ms-adfs-for-rancher}[Próximo: Configurando o Microsoft AD FS para o Rancher]
